--- a/src/main/webapp/assets/css/app.css
+++ b/src/main/webapp/assets/css/app.css
@@ -97,8 +97,9 @@ main
     right: 0px;
     top: -108px;
     padding-left: 3.5px;
+    padding-right: 16px;
     margin: 0 auto;
-    width: 14px;
+    width: 15px;
     color: white;
     font-size: 11.5px;
     -webkit-border-radius: 3px;
@@ -553,6 +554,14 @@ indivadualInfo
     color: gray;
 }
 
+.ii-href{
+    position: absolute;
+    top:0;
+    left:0px;
+    width: 100%;
+    height: 48px;
+}
+
 /*
 addDating
 */
@@ -605,4 +614,10 @@ addDating
 }
 .ad-btn{
     width: 100%;
+}
+
+.am-modal-dialog{
+    -moz-border-radius: 5px;
+    -webkit-border-radius: 5px;
+    border-radius: 5px;
 }
