--- a/src/main/webapp/assets/css/app.css
+++ b/src/main/webapp/assets/css/app.css
@@ -627,3 +627,9 @@ addDating
     -webkit-border-radius: 5px;
     border-radius: 5px;
 }
+.ad-limit{
+    position: absolute;
+    right: 20px;
+    top: 50px;
+    font-size: 11px;
+}
