--- a/src/main/webapp/assets/css/app.css
+++ b/src/main/webapp/assets/css/app.css
@@ -49,11 +49,11 @@ main
 
 .main-name {
     padding-top: 4px;
-    padding-left: 5px;
+    padding-left: 3px;
     font-size: 12.5px;
     color: white;
     text-align: left;
-    width: 100%;
+    width: 85px;
 }
 
 .main-g {
@@ -258,6 +258,14 @@ datingRequest
 
 .dr-background-img {
     width: 100%;
+}
+
+.dr-request{
+    position: absolute;
+    top: 12px;
+    right: 12px;
+    width: 70px;
+    height: 63px;
 }
 
 .dr-background {
