--- a/src/main/webapp/assets/css/app.css
+++ b/src/main/webapp/assets/css/app.css
@@ -6,18 +6,22 @@ main
 }
 
 .main-side-bar {
-    width: 50px;
+    width: 100%;
+    height: 30px;
     position: fixed;
-    bottom: 15px;
-    right: 15px;
-    font-size: 0;
-    line-height: 0;
+    bottom: 0px;
     z-index: 100;
 }
 
 .main-add {
-    height: 50px;
-    width: 50px;
+    background-color: #4EC296;
+    color: white;
+    text-align: center;
+    font-size: 14px;
+    height: 30px;
+    display: block;
+    letter-spacing: 15px;
+    padding-top: 4px;
 }
 
 .main-list li {
@@ -231,6 +235,12 @@ main
 .main-logo {
     width: 40px;
     height: 20px;
+}
+
+.main-null{
+    color: grey;
+    text-align: center;
+    padding-top: 200px;
 }
 
 /*
