--- a/src/main/webapp/assets/css/app.css
+++ b/src/main/webapp/assets/css/app.css
@@ -237,7 +237,7 @@ main
     height: 20px;
 }
 
-.main-null{
+.main-null {
     color: grey;
     text-align: center;
     padding-top: 200px;
@@ -286,8 +286,9 @@ datingRequest
 }
 
 .dr-bottom {
-    position: relative;
-    bottom: 38px;
+    position: absolute;
+    bottom: 0;
+    left: 0;
     width: 100%;
 }
 
@@ -410,6 +411,12 @@ datingRequest
     width: 90%;
     margin: 0 auto;
     padding: 0 5px 30px 5px;
+}
+
+.tl-location {
+    display: block;
+    width: 130px;
+    height: 16px;
 }
 
 .cbp_tmtimeline {
