--- a/src/main/webapp/assets/css/app.css
+++ b/src/main/webapp/assets/css/app.css
@@ -5,23 +5,41 @@ main
     background: #EBEBEB;
 }
 
-.main-side-bar {
-    width: 100%;
-    height: 38px;
+.main-bottom-bar {
+    width: 50px;
+    height: 50px;
     position: fixed;
-    bottom: 0px;
+    bottom: 15px;
+    right: 20px;
     z-index: 100;
 }
 
-.main-add {
-    background-color: #4EC296;
-    color: white;
+.main-top-bar {
+    background-color: white;
+    width: 100%;
+    height: 44px;
+    position: fixed;
+    top: 0px;
+    z-index: 100;
+}
+.main-top{
+    width: 100%;
+    height: 100%;
+    border-radius: 5px;
     text-align: center;
-    font-size: 16px;
-    height: 38px;
+    font-size: 14px;
+    color: #4EC296;
+    padding-top: 12px;
+}
+.main-top-text{
+    padding-bottom: 12px;
+    border-bottom: 2px solid #4EC296;
+}
+
+.main-add {
+    height: 50px;
+    width: 50px;
     display: block;
-    letter-spacing: 6px;
-    padding-top: 4px;
 }
 
 .main-list li {
@@ -148,7 +166,9 @@ main
 }
 
 .main-margin {
-    margin-bottom: -25px;
+    width: 100%;
+    margin-bottom: -55px;
+    margin-top: 48px;
 }
 
 .main-item {
@@ -241,7 +261,7 @@ main
 .main-null {
     color: grey;
     text-align: center;
-    padding-top: 200px;
+    margin-top: 200px;
 }
 
 /*
