--- a/src/main/webapp/assets/css/app.css
+++ b/src/main/webapp/assets/css/app.css
@@ -226,6 +226,8 @@ main
     -moz-border-radius: 3px;
     border-radius: 3px;
     color: white;
+    padding-left: 5px;
+    padding-right: 5px;
 }
 
 .main-people {
