不知道改了什么

--- a/src/main/webapp/assets/css/app.css
+++ b/src/main/webapp/assets/css/app.css
@@ -751,6 +751,9 @@ addDating
     background-color: transparent;
 !important;
 }
+.am-list-border>li>a:focus, .am-list-border>li>a:hover {
+    background-color: transparent;
+}
 
 .am-avg-sm-5 > li > div {
     margin: 0 auto;
