--- a/src/main/webapp/assets/css/app.css
+++ b/src/main/webapp/assets/css/app.css
@@ -44,39 +44,22 @@ main
     display: block;
 }
 
-.main-list li {
+.am-list>li {
     border-width: 0px;
     background: #EBEBEB;
 }
 
+.main-margin {
+    width: 100%;
+    margin-bottom: -55px;
+    margin-top: 48px;
+}
+
 .main-container {
     background: white;
-    height: 172px;
-    -webkit-border-radius: 3px;
-    -moz-border-radius: 3px;
-    border-radius: 3px;
-}
-
-.main-radius {
-    position: absolute;
-    top: 13px;
-    width: 120px;
-    height: 120px;
-}
-
-.main-text-bottom {
-    border-top: solid 1px #e2e4dd;
-    height: 50px;
-    width: 100%;
-}
-
-.main-name {
-    padding-top: 4px;
-    padding-left: 3px;
-    font-size: 12.5px;
-    color: white;
-    text-align: left;
-    width: 85px;
+    height: 151px;
+    /*border-top-left-radius: 3px;*/
+    /*border-top-right-radius: 3px;*/
 }
 
 .main-g {
@@ -89,177 +72,194 @@ main
     padding-right: 0;
     display: table-cell;
     vertical-align: middle;
-    width: 45%;
-    height: 100%;
-}
-
-.main-right {
-    padding-top: 13px;
-    width: 55%;
+    width: 37%;
     height: 100%;
 }
 
 .main-center {
     margin: 0 auto;
-    width: 120px;
+    width: 100px;
     height: 100%;
 }
 
-.main-gray {
-    position: absolute;
-    top: 130px;
-    background: #525E69;
-    width: 120px;
-    height: 30px;
-    -webkit-border-radius: 2px;
-    -moz-border-radius: 2px;
-    border-radius: 2px;
+.main-avatar {
+    margin-top: 13px;
+    width: 100px;
+    height: 100px;
+    border-top-left-radius: 3px;
+    border-top-right-radius: 3px;
+    overflow: hidden;
 }
 
-.main-gray p {
+.main-gender{
     position: absolute;
-    right: 0px;
-    top: -108px;
-    padding-left: 3.5px;
-    padding-right: 16px;
-    margin: 0 auto;
-    width: 15px;
+    top: 13px;
+    margin-top: 11px;
+    margin-bottom: 0px;
+    margin-right: 0px;
     color: white;
-    font-size: 11.5px;
-    -webkit-border-radius: 3px;
-    -moz-border-radius: 3px;
-    border-radius: 3px;
+    font-size: 11px;
+    text-align: right;
+    width: 100px;
+    height: 19px;
 }
 
 .main-girl {
-    background: #E96979;
+    background: #eb6877;
+    height: 19px;
+    width: 16px;
+    border-top-left-radius: 2px;
+    border-bottom-left-radius: 2px;
+    text-align: center;
+    padding-left: 2px;
+    margin-bottom: 0px;
 }
 
 .main-boy {
-    background: #4EC296;
+    background: #468ecb;
+    height: 19px;
+    width: 16px;
+    border-top-left-radius: 2px;
+    border-bottom-left-radius: 2px;
+    text-align: center;
+    margin-bottom: 0px;
 }
 
-.main-gray span {
-    position: absolute;
-    right: 3.5px;
+.main-info {
+    background: #525E6a;
+    color: white;
+    height: 25px;
+    border-bottom-left-radius: 3px;
+    border-bottom-right-radius: 3px;
 }
 
-.main-3 {
+.main-name {
+    padding-top: 1px;
+    padding-left: 3px;
+    font-size: 12.5px;
+    text-align: left;
+    margin: 0;
+    width: 70px;
+    height: 100%;
+}
+
+.main-age{
+    padding-top: 1.5px;
+    position: relative;
+    top: -25px;
+    margin: 0;
+    font-size: 11px;
+    text-align: right;
+    width: 97%;
+    height: 100%;
+}
+
+.main-right {
+    padding-top: 13px;
     padding-left: 0;
     padding-right: 0;
+    width: 63%;
     height: 100%;
-    width: 30%;
+    color: white;
+    font-size: 13px;
 }
 
-.main-button {
-    margin: 0 auto;
-    width: 86px;
-    height: 100%;
-    line-height: 45px;
-}
-
-.main-9 {
-    padding-top: 11px;
-    padding-left: 5%;
-    padding-right: 0px;
-    font-size: 15px;
-    height: 100%;
-    width: 70%;
-}
-
-.main-margin {
+.main-yue{
+    height: 20px;
     width: 100%;
-    margin-bottom: -55px;
-    margin-top: 48px;
 }
 
-.main-item {
-    position: relative;
-    top: -23px;
-    padding-right: 3px;
-    padding-left: 3px;
-    width: 20px;
-    font-size: 13px;
-    color: white;
-    background: #4EC296;
-    -webkit-border-radius: 3px;
-    -moz-border-radius: 3px;
-    border-radius: 3px;
+.main-people{
+    height: 100%;
+}
+.main-item{
+    position: absolute;
+    top: 13px;
+    left: 29%;
+}
+.main-start-time{
+    position: absolute;
+    top: 13px;
+    left: 58%;
 }
 
-.main-start-time {
-    position: relative;
-    top: -23px;
-    margin-left: 5%;
-    width: auto;
-    font-size: 13px;
-    padding-left: 2%;
-    padding-right: 3%;
-    color: white;
-    background: #4EC296;
-    -webkit-border-radius: 3px;
-    -moz-border-radius: 3px;
-    border-radius: 3px;
+.main-people > span{
+    background: #97a5b5;
+    -webkit-border-radius: 2px;
+    -moz-border-radius: 2px;
+    border-radius: 2px;
+    padding: 1px 5px 2px;
 }
 
-.main-green {
-    background-color: #4EC296;
-    border-color: #4EC296;
+.main-item > span{
+    background: #636e79;
+    -webkit-border-radius: 2px;
+    -moz-border-radius: 2px;
+    border-radius: 2px;
+    padding: 1px 5px 2px;
 }
 
-.main-danger {
-    background-color: darkgrey;
-    border-color: darkgrey;
-    color: white;
-}
-
-.main-icon-people {
-    margin-bottom: 3px;
-    margin-right: 12px;
-    height: 12px;
-    width: 16px;
-}
-
-.main-people span {
-    background: #4EC296;
-    -webkit-border-radius: 3px;
-    -moz-border-radius: 3px;
-    border-radius: 3px;
-    color: white;
-    padding-left: 5px;
-    padding-right: 5px;
-}
-
-.main-people {
-    position: relative;
-    top: -23px;
-    padding-top: 5px;
-    font-size: 11px;
-}
-
-.main-time {
-    font-size: 11px;
-    height: 40px;
-    margin: auto 0;
+.main-start-time > span{
+    background: #97a5b5;
+    -webkit-border-radius: 2px;
+    -moz-border-radius: 2px;
+    border-radius: 2px;
+    padding: 1px 5px 2px;
 }
 
 .main-location {
-    height: 48px;
-    font-size: 15px;
+    color: black;
+    height: 53px;
+    font-size: 14px;
+    padding: 8px 6% 0 0;
+}
+
+.main-time {
+    color: #999999;
+    font-size: 11px;
 }
 
 .main-sports {
-    position: relative;
-    top: -23px;
     margin-top: 5px;
     margin-right: 2%;
     height: 27px;
     width: 27px;
 }
 
-.main-logo {
-    width: 40px;
-    height: 20px;
+.main-text-bottom {
+    background-color: white;
+    border-top: solid 1px #EBEBEB;
+    height: 40px;
+    width: 100%;
+}
+
+.main-content {
+    color: #999999;
+    padding-top: 8px;
+    padding-left: 4%;
+    padding-right: 0px;
+    font-size: 14px;
+    height: 100%;
+    width: 70%;
+}
+
+.main-button {
+    line-height: 34.5px;
+    padding-left: 0;
+    padding-right: 0;
+    padding-right: 15px;
+}
+
+.main-green {
+    background-color: #6dcfaa;
+    border-color: #6dcfaa;
+    width: 100%;
+}
+
+.main-danger {
+    background-color: darkgrey;
+    border-color: darkgrey;
+    color: white;
 }
 
 .main-null {
