--- a/src/main/webapp/assets/css/app.css
+++ b/src/main/webapp/assets/css/app.css
@@ -6,18 +6,18 @@ main
 }
 
 .main-bottom-bar {
-    width: 50px;
-    height: 50px;
+    width: 42px;
+    height: 42px;
     position: fixed;
     bottom: 15px;
-    right: 20px;
+    right: 15px;
     z-index: 100;
 }
 
 .main-top-bar {
     background-color: white;
     width: 100%;
-    height: 44px;
+    height: 38px;
     position: fixed;
     top: 0px;
     z-index: 100;
@@ -30,29 +30,37 @@ main
     text-align: center;
     font-size: 14px;
     color: #4EC296;
-    padding-top: 12px;
+    padding-top: 8px;
 }
 
 .main-top-text {
-    padding-bottom: 12px;
+    padding-bottom: 10px;
     border-bottom: 2px solid #4EC296;
 }
 
 .main-add {
-    height: 50px;
-    width: 50px;
+    height: 42px;
+    width: 42px;
     display: block;
 }
 
-.am-list>li {
+.am-list > li {
     border-width: 0px;
     background: #EBEBEB;
 }
 
+.am-list-border > li > a, .am-list-static.am-list-border > li {
+    padding: 0;
+}
+
+.main-list {
+    margin-top: 49px;
+    margin-bottom: 70px;
+}
+
 .main-margin {
     width: 100%;
-    margin-bottom: -55px;
-    margin-top: 48px;
+    margin-bottom: -8px;
 }
 
 .main-container {
@@ -72,12 +80,12 @@ main
     padding-right: 0;
     display: table-cell;
     vertical-align: middle;
-    width: 37%;
+    width: 126px;
     height: 100%;
 }
 
 .main-center {
-    margin: 0 auto;
+    margin-left: 13px;
     width: 100px;
     height: 100%;
 }
@@ -91,9 +99,9 @@ main
     overflow: hidden;
 }
 
-.main-gender{
+.main-gender {
     position: absolute;
-    top: 13px;
+    top: 10px;
     margin-top: 11px;
     margin-bottom: 0px;
     margin-right: 0px;
@@ -111,7 +119,7 @@ main
     border-top-left-radius: 2px;
     border-bottom-left-radius: 2px;
     text-align: center;
-    padding-left: 2px;
+    padding-left: 1px;
     margin-bottom: 0px;
 }
 
@@ -131,6 +139,7 @@ main
     height: 25px;
     border-bottom-left-radius: 3px;
     border-bottom-right-radius: 3px;
+    margin-top: -1px;
 }
 
 .main-name {
@@ -143,7 +152,7 @@ main
     height: 100%;
 }
 
-.main-age{
+.main-age {
     padding-top: 1.5px;
     position: relative;
     top: -25px;
@@ -155,35 +164,37 @@ main
 }
 
 .main-right {
+    position: absolute;
+    top: 0px;
+    left: 128px;
     padding-top: 13px;
     padding-left: 0;
     padding-right: 0;
-    width: 63%;
-    height: 100%;
+    width: 60%;
     color: white;
     font-size: 13px;
 }
 
-.main-yue{
+.main-yue {
     height: 20px;
     width: 100%;
 }
 
-.main-people{
-    height: 100%;
-}
-.main-item{
-    position: absolute;
-    top: 13px;
-    left: 29%;
-}
-.main-start-time{
-    position: absolute;
-    top: 13px;
-    left: 58%;
-}
+/*.main-people{*/
+/*height: 100%;*/
+/*}*/
+/*.main-item{*/
+/*position: absolute;*/
+/*top: 13px;*/
+/*left: 29%;*/
+/*}*/
+/*.main-start-time{*/
+/*position: absolute;*/
+/*top: 13px;*/
+/*left: 58%;*/
+/*}*/
 
-.main-people > span{
+.main-people {
     background: #97a5b5;
     -webkit-border-radius: 2px;
     -moz-border-radius: 2px;
@@ -191,7 +202,7 @@ main
     padding: 1px 5px 2px;
 }
 
-.main-item > span{
+.main-item {
     background: #636e79;
     -webkit-border-radius: 2px;
     -moz-border-radius: 2px;
@@ -199,7 +210,7 @@ main
     padding: 1px 5px 2px;
 }
 
-.main-start-time > span{
+.main-start-time {
     background: #97a5b5;
     -webkit-border-radius: 2px;
     -moz-border-radius: 2px;
@@ -208,10 +219,10 @@ main
 }
 
 .main-location {
-    color: black;
+    color: #333333;
     height: 53px;
     font-size: 14px;
-    padding: 8px 6% 0 0;
+    padding-top: 8px;
 }
 
 .main-time {
@@ -236,18 +247,20 @@ main
 .main-content {
     color: #999999;
     padding-top: 8px;
-    padding-left: 4%;
-    padding-right: 0px;
+    padding-left: 13px;
+    padding-right: 13px;
     font-size: 14px;
     height: 100%;
-    width: 70%;
+    margin-right: 85px;
 }
 
 .main-button {
-    line-height: 34.5px;
+    position: absolute;
+    top: 158px;
+    right: 15px;
+    width: 70px;
     padding-left: 0;
     padding-right: 0;
-    padding-right: 15px;
 }
 
 .main-green {
@@ -263,9 +276,11 @@ main
 }
 
 .main-null {
+    position: absolute;
+    top: 200px;
+    width: 100%;
     color: grey;
     text-align: center;
-    margin-top: 200px;
 }
 
 /*
@@ -598,71 +613,209 @@ indivadualInfo
 }
 
 .ii-container {
-    padding-top: 25px;
-    padding-left: 25px;
-    padding-right: 25px;
+    margin: 50px 11px 10px;
+    font-size: 14px;
 }
 
 .ii-info {
     background-color: white;
-    color: #66727d;
-    font-size: 14px;
-    margin-top: 35px;
-    margin-bottom: -18px;
+    -webkit-border-radius: 3px;
+    -moz-border-radius: 3px;
+    border-radius: 3px;
+    width: 100%;
+    margin-bottom: 10px;
 }
 
 .ii-avatar {
     width: 100%;
-    height: 80px;
+    height: 100px;
+    padding-top: 36px;
+    padding-left: 10px;
+    border-bottom: 1px solid #EBEBEB;
 }
 
-.ii-avatar img {
-    margin: auto 0;
+.ii-avatar > img {
     width: 80px;
     height: 80px;
     position: absolute;
-    right: 15px;
+    right: 35px;
+    top: 9px;
 }
 
-.ii-title {
-    height: 80px;
+.ii-nickName {
     width: 100%;
-    line-height: 80px;
-    overflow: hidden;
+    height: 42px;
+    padding-top: 9px;
+    padding-left: 10px;
+    border-bottom: 1px solid #EBEBEB;
 }
 
-.ii-badge {
-    color: #66727d;
+.ii-nickName > span {
     background-color: white;
+    color: #66727d;
     font-weight: normal;
-    padding-left: 0px;
-    padding-right: 15px;
+    position: absolute;
+    right: 32px;
+    padding-top: 6px;
+}
+
+.ii-tel {
+    width: 100%;
+    height: 42px;
+    padding-top: 9px;
+    padding-left: 10px;
+    border-bottom: 1px solid #EBEBEB;
+}
+
+.ii-tel > span {
+    background-color: white;
+    color: #66727d;
+    font-weight: normal;
+    position: absolute;
+    right: 32px;
+    padding-top: 6px;
+}
+
+.ii-weChat {
+    width: 100%;
+    height: 42px;
+    padding-top: 9px;
+    padding-left: 10px;
+    border-bottom: 1px solid #EBEBEB;
+}
+
+.ii-weChat > span {
+    background-color: white;
+    color: #66727d;
+    font-weight: normal;
+    position: absolute;
+    right: 32px;
+    padding-top: 6px;
+}
+
+.ii-timeLine {
+    width: 100%;
+    height: 42px;
+    padding-top: 9px;
+    padding-left: 10px;
+}
+
+.ii-timeLine > span {
+    background-color: white;
+    color: #66727d;
+    font-weight: normal;
+    position: absolute;
+    right: 32px;
+    padding-top: 6px;
+}
+
+.ii-gender {
+    width: 100%;
+    height: 42px;
+    padding-top: 9px;
+    padding-left: 10px;
+    border-bottom: 1px solid #EBEBEB;
+}
+
+.ii-gender > span {
+    background-color: white;
+    color: #66727d;
+    font-weight: normal;
+    position: absolute;
+    right: 32px;
+    padding-top: 6px;
+}
+
+.ii-age {
+    width: 100%;
+    height: 42px;
+    padding-top: 9px;
+    padding-left: 10px;
+    border-bottom: 1px solid #EBEBEB;
+}
+
+.ii-age > span {
+    background-color: white;
+    color: #66727d;
+    font-weight: normal;
+    position: absolute;
+    right: 32px;
+    padding-top: 6px;
+}
+
+.ii-height {
+    width: 100%;
+    height: 42px;
+    padding-top: 9px;
+    padding-left: 10px;
+    border-bottom: 1px solid #EBEBEB;
+}
+
+.ii-height > span {
+    background-color: white;
+    color: #66727d;
+    font-weight: normal;
+    position: absolute;
+    right: 32px;
+    padding-top: 6px;
+}
+
+.ii-weight {
+    width: 100%;
+    height: 42px;
+    padding-top: 9px;
+    padding-left: 10px;
+    border-bottom: 1px solid #EBEBEB;
+}
+
+.ii-weight > span {
+    background-color: white;
+    color: #66727d;
+    font-weight: normal;
+    position: absolute;
+    right: 32px;
+    padding-top: 6px;
+}
+
+.ii-arrows {
+    position: relative;
+    top: -30px;
+    right: 0px;
+    color: #66727d;
+    font-weight: normal;
+    display: block;
+    text-align: right;
+    padding-right: 5px;
+    padding-top: 10px;
+    font-size: 13px;
+    height: 41px;
 }
 
 .ii-sports {
-    color: #66727d;
+    width: 100%;
+    height: 42px;
+    padding-top: 8px;
+    padding-left: 10px;
+    border-bottom: 1px solid #EBEBEB;
+}
+
+.ii-icon {
+    position: absolute;
+    right: 11px;
     background-color: white;
-    font-weight: normal;
-    padding-left: 0px;
-    padding-right: 3px;
+    bottom: 47px;
 }
 
 .ii-sports-icon {
     width: 25px;
     height: 25px;
-    margin-top: -4px;
 }
 
-.am-icon-chevron-right {
-    color: gray;
-}
-
-.ii-href {
-    position: absolute;
-    top: 0;
-    left: 0px;
+.ii-clause {
     width: 100%;
-    height: 48px;
+    height: 42px;
+    padding-top: 8px;
+    padding-left: 10px;
 }
 
 /*
@@ -673,29 +826,131 @@ addDating
 }
 
 .ad-container {
-    padding-top: 25px;
-    padding-left: 25px;
-    padding-right: 25px;
+    margin: 50px 11px 10px;
+    font-size: 14px;
 }
 
 .ad-info {
     background-color: white;
-    color: #66727d;
-    font-size: 14px;
+    -webkit-border-radius: 3px;
+    -moz-border-radius: 3px;
+    border-radius: 3px;
+    width: 100%;
+    margin-bottom: 10px;
 }
 
 .ad-title {
-    height: 80px;
     width: 100%;
-    line-height: 80px;
-    overflow: hidden;
+    height: 42px;
+    padding-top: 9px;
+    padding-left: 10px;
+    border-bottom: 1px solid #EBEBEB;
 }
 
-.ad-badge {
-    color: #66727d;
+.ad-title > span {
     background-color: white;
+    color: #66727d;
     font-weight: normal;
-    padding-right: 15px;
+    position: absolute;
+    right: 32px;
+    padding-top: 6px;
+}
+
+.ad-location {
+    width: 100%;
+    height: 42px;
+    padding-top: 9px;
+    padding-left: 10px;
+    border-bottom: 1px solid #EBEBEB;
+}
+
+.ad-location > span {
+    background-color: white;
+    color: #66727d;
+    font-weight: normal;
+    position: absolute;
+    right: 32px;
+    padding-top: 6px;
+}
+
+.ad-start {
+    width: 100%;
+    height: 42px;
+    padding-top: 9px;
+    padding-left: 10px;
+    border-bottom: 1px solid #EBEBEB;
+}
+
+.ad-start > span {
+    background-color: white;
+    color: #66727d;
+    font-weight: normal;
+    position: absolute;
+    right: 32px;
+    padding-top: 6px;
+}
+
+.ad-end {
+    width: 100%;
+    height: 42px;
+    padding-top: 9px;
+    padding-left: 10px;
+}
+
+.ad-end > span {
+    background-color: white;
+    color: #66727d;
+    font-weight: normal;
+    position: absolute;
+    right: 32px;
+    padding-top: 6px;
+}
+
+.ad-partner {
+    width: 100%;
+    height: 42px;
+    padding-top: 9px;
+    padding-left: 10px;
+    border-bottom: 1px solid #EBEBEB;
+}
+
+.ad-partner > span {
+    background-color: white;
+    color: #66727d;
+    font-weight: normal;
+    position: absolute;
+    right: 32px;
+    padding-top: 6px;
+}
+
+.ad-age {
+    width: 100%;
+    height: 42px;
+    padding-top: 9px;
+    padding-left: 10px;
+}
+
+.ad-age > span {
+    background-color: white;
+    color: #66727d;
+    font-weight: normal;
+    position: absolute;
+    right: 32px;
+    padding-top: 6px;
+}
+
+.ad-arrows {
+    position: relative;
+    top: -31px;
+    right: 0px;
+    color: #66727d;
+    font-weight: normal;
+    display: block;
+    text-align: right;
+    padding-right: 5px;
+    padding-top: 10px;
+    font-size: 13px;
+    height: 41px;
 }
 
 .ad-sports {
@@ -737,21 +992,17 @@ addDating
 
 .ad-limit {
     position: absolute;
-    right: 20px;
-    top: 50px;
-    font-size: 11px;
-}
-
-.am-icon-chevron-right {
-    position: absolute;
     right: 10px;
+    top: 38px;
+    font-size: 11px;
 }
 
 .am-list-border > li > a:focus, .am-list-border > li > a:hover .am-u-sm-4 > a:focus, .am-u-sm-4 > a:hover {
     background-color: transparent;
 !important;
 }
-.am-list-border>li>a:focus, .am-list-border>li>a:hover {
+
+.am-list-border > li > a:focus, .am-list-border > li > a:hover {
     background-color: transparent;
 }
 
@@ -781,4 +1032,19 @@ addDating
     height: 50px;
     position: relative;
     top: -77px;
+}
+
+@media only screen and (max-width: 320px) {
+    .main-right {
+        position: absolute;
+        top: 0px;
+        left: 118px;
+        padding-top: 13px;
+        padding-left: 0;
+        padding-right: 0;
+        width: 62%;
+        color: white;
+        font-size: 13px;
+    }
+
 }
