--- a/src/main/webapp/assets/css/static.css
+++ b/src/main/webapp/assets/css/static.css
@@ -74,3 +74,7 @@ a:focus, a:hover {
     -webkit-box-shadow: none;
     box-shadow: none;
 }
+
+.am-slider-a1 .am-control-nav li a.am-active {
+    background-color: #4EC296;
+}
