--- a/src/main/webapp/assets/css/app.css
+++ b/src/main/webapp/assets/css/app.css
@@ -907,6 +907,10 @@ addDating
     padding-top: 6px;
 }
 
+.ad-badge {
+    font-size: 15px;
+}
+
 .ad-partner {
     width: 100%;
     height: 42px;
@@ -929,6 +933,7 @@ addDating
     height: 42px;
     padding-top: 9px;
     padding-left: 10px;
+    border-bottom: 1px solid #EBEBEB;
 }
 
 .ad-age > span {
@@ -1042,9 +1047,10 @@ addDating
 }
 
 @media only screen and (max-width: 320px) {
-    .main-left{
+    .main-left {
         width: 40%;
     }
+
     .main-right {
         padding-top: 13px;
         padding-left: 0;
