--- a/src/main/webapp/assets/css/app.css
+++ b/src/main/webapp/assets/css/app.css
@@ -162,7 +162,7 @@ main
 }
 
 .main-right {
-    padding-top: 13px;
+    padding-top: 11px;
     padding-left: 0;
     padding-right: 15px;
     color: white;
@@ -183,15 +183,17 @@ main
 }
 
 .main-item {
+    font-size:13px;
     background: #636e79;
     -webkit-border-radius: 2px;
     -moz-border-radius: 2px;
     border-radius: 2px;
     padding: 1px 5px 2px;
-    margin-right: 8px;
+    margin-right: 3px;
 }
 
 .main-start-time {
+    font-size: 13px;
     background: #97a5b5;
     -webkit-border-radius: 2px;
     -moz-border-radius: 2px;
@@ -1046,16 +1048,22 @@ addDating
     border-radius: 5px;
 }
 
-@media only screen and (max-width: 320px) {
+@media only screen and (max-width: 359px) {
     .main-left {
-        width: 40%;
+        width: 35%;
+    }
+
+    .main-center {
+        margin-left: 6px;
+        width: 100px;
+        height: 100%;
     }
 
     .main-right {
-        padding-top: 13px;
+        padding-top: 11px;
         padding-left: 0;
         padding-right: 15px;
-        width: 60%;
+        width: 65%;
         color: white;
         font-size: 13px;
     }
